# WiFi-based-landmark-estimation

./: CITATION.cff  DT_main_v6.m  DT_main_v7.m  LICENSE  README.md  aoa_WSR.csv  bartlett_AOA_estimator.m  jsondata.json  jsondata_sliced.json  main.m  main_csv.m  mtimesx.mexa64  rx_trajectory_2021-06-27_202550_.csv
Data/: tx1_10cm_1_interpl_trajectory.json  tx1_10cm_1_packet_dist.json  tx1_10cm_2_interpl_trajectory.json  tx1_10cm_2_packet_dist.json  tx1_10cm_3_interpl_trajectory.json  tx1_10cm_3_packet_dist.json  tx1_30cm_1_interpl_trajectory.json  tx1_30cm_1_packet_dist.json  tx1_30cm_2_interpl_trajectory.json  tx1_30cm_2_packet_dist.json  tx1_30cm_3_interpl_trajectory.json  tx1_30cm_3_packet_dist.json  tx1_50cm_1_interpl_trajectory.json  tx1_50cm_1_packet_dist.json  tx1_50cm_2_interpl_trajectory.json  tx1_50cm_2_packet_dist.json  tx1_70cm_1_interpl_trajectory.json  tx1_70cm_1_packet_dist.json  tx1_70cm_2_interpl_trajectory.json  tx1_70cm_2_packet_dist.json  tx1_90cm_1_interpl_trajectory.json  tx1_90cm_1_packet_dist.json  tx1__tx_interpl_trajectory.json  tx1__tx_packet_dist.json  tx1_aoa_profile_10cm_1.csv  tx1_aoa_profile_10cm_2.csv  tx1_aoa_profile_10cm_3.csv  tx1_aoa_profile_30cm_1.csv  tx1_aoa_profile_30cm_2.csv  tx1_aoa_profile_30cm_3.csv  tx1_aoa_profile_50cm_1.csv  tx1_aoa_profile_50cm_2.csv  tx1_aoa_profile_70cm_1.csv  tx1_aoa_profile_70cm_2.csv  tx1_aoa_profile_80cm_1.csv  tx1_aoa_profile_90cm_1.csv  tx1_aoa_profile__tx.csv  tx1_aoa_profile_forward_1.csv  tx1_aoa_profile_forward_2.csv  (+16 more)
nexus_controller/simulation_models/: nexus_robot.sdf  package.xml
(+95 files in other folders)
