<?xml version="1.0"?>
<package format="2">
  <name>nexus_controller</name>
  <version>0.0.0</version>
  <description>Control a Nexus robot while localizing landmarks</description>  
  <author email="a.h.sloot@student.rug.nl">alex sloot</author>
  <maintainer email="a.h.sloot@student.rug.nl">alex sloot</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>serial</build_depend>
  <build_export_depend>serial</build_export_depend>
  <exec_depend>serial</exec_depend>

  <export>

  </export>
</package>
